# ingress-drone-explorer-cpp

./: .gitignore  .tokeignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: Task.hpp  command.hpp  s2.hpp  task_t.hpp  utils.hpp
include/boost_extensions/: json_tag_invoke.hpp  program_options_validate.hpp
include/definitions/: coordinate_t.hpp  drawn_item_t.hpp
include/explorer/: explorer_t.hpp
include/extensions/: iostream_extensions.hpp  tag_invoke.hpp  validate.hpp
include/s2/: cell_t.hpp  ecef_coordinate_t.hpp
include/std_extensions/: iostream.hpp
include/task/: task_t.hpp
include/type/: DrawnItem.hpp  LngLat.hpp  Portal.hpp  portal_t.hpp
include/utils/: digits.hpp  match_pattern.hpp
src/: Task.cpp  command.cpp  main.cpp  s2.cpp  task_t.cpp
src/boost_extensions/: json_tag_invoke.cpp  program_options_validate.cpp
src/definitions/: coordinate_t.cpp
src/explorer/: explore.cpp  load.cpp  report.cpp
src/extensions/: iostream_extensions.cpp  tag_invoke.cpp  validate.cpp
src/s2/: cell_t.cpp
src/task/: explore.cpp  load.cpp  report.cpp
src/type/: LngLat.cpp  coordinate_t.cpp
